# Lifeblood

./: .editorconfig  .gitattributes  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  Lifeblood.sln  README.md  export-source.sh  measure-analyze.ps1  screenshot.py  smoke-mcp-analyze.ps1  smoke-mcp-p1-dogfood.ps1  smoke-mcp-p2-dogfood.ps1  smoke-mcp-p3-dogfood.ps1  smoke-mcp-p4-dogfood.ps1  smoke-mcp-p5-dogfood.ps1
.claude/plans/: bcl-ownership-fix.md  next-session-handoff.md  post-bcl-fixes.md
.github/workflows/: build.yml  ci.yml  publish.yml
adapters/go/: README.md
adapters/native-clang/: CMakeLists.txt  FFMPEG_SCOUT.md  README.md  TOOLCHAIN.md
adapters/native-clang/src/: ClangBuildArgumentFactsCollector.cpp  ClangBuildArgumentFactsCollector.h  ClangCommandLineMacroCollector.cpp  ClangCommandLineMacroCollector.h  ClangCompilationDatabase.cpp  ClangCompilationDatabase.h  ClangCompileCommandReader.cpp  ClangCompileCommandReader.h  ClangIndex.cpp  ClangIndex.h  ClangParseArgumentBuilder.cpp  ClangParseArgumentBuilder.h  ClangSourceMapper.cpp  ClangSourceMapper.h  ClangTranslationUnitParser.cpp  ClangTranslationUnitParser.h  ClangUtilities.cpp  ClangUtilities.h  GraphModel.h  JsonGraphElements.cpp  JsonGraphElements.h  JsonGraphWriter.cpp  JsonGraphWriter.h  LibClangExtractor.cpp  LibClangExtractor.h  NativeAstVisitor.cpp  NativeAstVisitor.h  NativeCallKinds.h  NativeCompileCommand.h  NativeCountPropertyWriter.h  NativeCursorHandle.h  NativeDeclarationEmitter.cpp  NativeDeclarationEmitter.h  NativeDeclarationKinds.h  NativeDeclaredSurfaceInventory.cpp  NativeDeclaredSurfaceInventory.h  NativeDiagnosticSummary.h  NativeDirectionalSymbolCounts.cpp  NativeDirectionalSymbolCounts.h  NativeEdgeClassification.cpp  (+83 more)
adapters/native-clang/test-fixtures/callback-table-c/: compile_commands.json  expected.graph.json
adapters/native-clang/test-fixtures/callback-table-c/src/: registry.c  registry.h
adapters/native-clang/test-fixtures/cross-tu-c/src/: audio.c  codec.h  video.c
adapters/native-clang/test-fixtures/direct-refs-c/: compile_commands.json  expected.graph.json
adapters/native-clang/test-fixtures/direct-refs-c/src/: decode.c  packet.h
adapters/native-clang/test-fixtures/multi-tu-c/: compile_commands.json
adapters/native-clang/test-fixtures/multi-tu-c/src/: audio.c  packet.h  video.c
adapters/native-clang/test-fixtures/partial-parse-c/: compile_commands.json
adapters/native-clang/test-fixtures/partial-parse-c/src/: good.c  good.h
adapters/native-clang/test-fixtures/profile-c/: expected.audio.graph.json  expected.video.graph.json
adapters/native-clang/test-fixtures/profile-c/profiles/audio/: compile_commands.json
adapters/native-clang/test-fixtures/profile-c/profiles/video/: compile_commands.json
adapters/native-clang/test-fixtures/profile-c/src/: codec.c  codec.h
adapters/native-clang/test-fixtures/return-type-c/: compile_commands.json
adapters/native-clang/test-fixtures/return-type-c/src/: api.c
adapters/native-clang/test-fixtures/tiny-c/: compile_commands.json  expected.graph.json
adapters/native-clang/test-fixtures/tiny-c/src/: decode.c  packet.h
adapters/native-clang/test-fixtures/warning-c/: compile_commands.json
adapters/native-clang/test-fixtures/warning-c/src/: warning.c
adapters/native-clang/tools/ffmpeg-scout/: Prepare-FfmpegScout.ps1  ScoutCompileDatabase.ps1  ScoutExtraction.ps1  ScoutPaths.ps1  ScoutToolchain.ps1  default-files.txt
adapters/python/: .gitignore  README.md
adapters/rust/: README.md
adapters/typescript/: README.md  package-lock.json  package.json
devmemory/: lifeblood-intake.md  lifeblood-tracking-archive.md  lifeblood-tracking.md
docs/: ADAPTERS.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AUDIT_HOLES.md  DOGFOOD_CODE_EXECUTION.md  DOGFOOD_FINDINGS.md  IMPROVEMENT_INBOX.md  MASTERPLAN.md  MASTERPLAN_CHAT_ADDITIONS.md  MCP_SETUP.md  NATIVE_CLANG.md  PLAYBOOK_CSHARP.md  RELEASE.md  SCHEMA_DEPRECATION_POLICY.md  STATUS.md  TOOLS.md  UNITY.md  VISION_KNOWLEDGE_ARCHITECTURE.md  architecture.html
docs/audit/: fake-stuff-2026-05-14.md
docs/case-studies/: unity-daw-parity-2026-05.md
docs/invariants/: INDEX.md  architecture.md  csharp-adapter.md  governance.md  mcp-protocol.md  pipeline.md  resolver.md  tools.md  usage.md
docs/plans/: MASTERPLAN-2026-05-24.md  dawg-dogfood-polish-2026-04-26.md  dogfood-intake-masterplan-2026-06-13.md  dotnet-concurrency-prep-2026-05-28.md  invariant-check-spike.md  lifeblood-cheap-bugfix-2026-05-30.md  lifeblood-correctness-masterplan-2026-05-15.md  multi-define-union-l-lim-001-plan-2026-05-24.md  native-clang-adapter-masterplan-2026-05-16.md
packs/clean-architecture/: rules.json
packs/hexagonal/: rules.json
packs/lifeblood/: rules.json
schemas/: graph.schema.json  rules.schema.json
skills/lifeblood-mcp/: SKILL.md
src/Lifeblood.Adapters.CSharp/: CSharpUserInputCanonicalizer.cs  DefaultDefineProfileResolver.cs  Lifeblood.Adapters.CSharp.csproj  PhysicalFileSystem.cs  ProcessIsolatedCodeExecutor.cs  ProcessUsageProbe.cs  RoslynArgumentBinding.cs  RoslynAssignmentCoverageExtractor.cs  RoslynCallsiteArgumentExtractor.cs  RoslynCapabilityDescriptor.cs  RoslynCodeExecutor.cs  RoslynCompilationHost.cs  RoslynEdgeExtractor.cs  RoslynEnumCoverageService.cs  RoslynFeatureSwitchExtractor.cs  RoslynFindReferencesService.cs  RoslynMemberCountExtractor.cs  RoslynModuleDiscovery.cs  RoslynSemanticView.cs  RoslynStaticTableExtractor.cs  RoslynStructLayoutExtractor.cs  RoslynSymbolExtractor.cs  RoslynWireAuditExtractor.cs  RoslynWorkspaceAnalyzer.cs  RoslynWorkspaceRefactoring.cs  UnityAssemblyResolver.cs  UnityDefineProfileResolver.cs  UnityReachabilityAdapter.cs
src/Lifeblood.Adapters.JsonGraph/: JsonGraphExporter.cs  JsonGraphImporter.cs  Lifeblood.Adapters.JsonGraph.csproj
src/Lifeblood.Analysis/: AnalysisPipeline.cs  AsmdefBoundaryAnalyzer.cs  AuthorityCoverageAnalyzer.cs  BlastRadiusAnalyzer.cs  CircularDependencyDetector.cs  CouplingAnalyzer.cs  Lifeblood.Analysis.csproj  RulePacks.cs  RuleValidator.cs  (+2 more)
(+353 files in other folders)
